--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* index.css — estilo global moderno */
+
 
 * {
   margin: 0;
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Poppins", "Segoe UI", Arial, sans-serif;
-  background: linear-gradient(135deg, #6a11cb, #2575fc);
+  background: url(https://www.museudapelada.com/storage/2022/05/escudo.jpg);
   min-height: 100vh;
   display: flex;
   justify-content: center;
