--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,13 @@ body {
   align-items: center;
   color: #222;
 }
+.body {
+  font-family: "Poppins", "Segoe UI", Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #222;
+}
 
 #root {
   width: 100%;
